<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/mainContainer"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/backArrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_arrow_back"
        android:layout_margin="24dp"
        android:foregroundTint="#3F5C47"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:padding="24dp"
        android:gravity="center">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/tag"
            android:layout_marginBottom="16dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/search_by_tag_title"
            android:textSize="24sp"
            android:fontFamily="@font/roboto_bold"
            android:textColor="@color/colorTextBlack"
            android:layout_marginBottom="16dp"/>

        <TextView
            android:id="@+id/textScan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/search_by_tag_id_text"
            android:textSize="16sp"
            android:fontFamily="@font/roboto_regular"
            android:textColor="@color/colorTextBlack" />

        <EditText
            android:id="@+id/tagEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_edit_text"
            android:paddingHorizontal="16dp"
            android:paddingVertical="12dp"
            android:layout_marginTop="24dp"
            android:maxLines="1"
            android:inputType="number"
            android:hint="@string/search_by_tag_id_text_hint"
            android:textColorHint="@color/colorTextSecondary"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/buttonsCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="24dp"
        android:background="@drawable/shape_back_gradient">

        <online.juter.supersld.view.input.selectors.JTHorizontalSwitch
            android:id="@+id/searchTypeSwitch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="16dp"
            android:gravity="center">

            <ProgressBar
                android:id="@+id/progress"
                android:layout_width="52dp"
                android:layout_height="52dp"
                android:indeterminateTint="#FFFFFF"
                android:visibility="gone"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/searchScanButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/ButtonWhiteEmpty"
                android:text="@string/search_by_tag_button" />

        </LinearLayout>


    </LinearLayout>

</LinearLayout>