<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/mainCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingVertical="24dp"
        android:background="@drawable/shape_back_gradient">

        <TextView
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="Юрий Воронцов"
            android:textSize="24sp"
            android:fontFamily="@font/roboto_bold"
            android:textColor="@color/colorTextWhite"
            android:paddingHorizontal="24dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/home_tasks_title"
            android:textSize="20sp"
            android:fontFamily="@font/roboto_regular"
            android:textColor="@color/colorTextWhite"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:paddingHorizontal="24dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingStart="24dp">

            <View
                android:layout_width="241dp"
                android:layout_height="115dp"
                android:background="#59818DAD"
                android:layout_marginEnd="16dp"/>

            <View
                android:layout_width="241dp"
                android:layout_height="115dp"
                android:background="#59818DAD"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="24dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/home_process_title"
            android:textSize="20sp"
            android:fontFamily="@font/roboto_bold"
            android:textColor="@color/colorTextBlack" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/new_cow"
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="0dp"
            app:cardBackgroundColor="@color/colorBack"
            app:cardCornerRadius="0dp"
            app:strokeColor="@color/colorBorder"
            app:strokeWidth="1dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/home_process_new_cow"
                android:textColor="@color/colorTextBlack"
                android:fontFamily="@font/roboto_regular"
                android:textSize="18sp"
                android:padding="16dp"
                android:drawableStart="@drawable/ic_add"
                android:drawablePadding="8dp"/>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cow_info"
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="0dp"
            app:cardBackgroundColor="@color/colorBack"
            app:cardCornerRadius="0dp"
            app:strokeColor="@color/colorBorder"
            app:strokeWidth="1dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/home_process_cow_info"
                android:textColor="@color/colorTextBlack"
                android:fontFamily="@font/roboto_regular"
                android:textSize="18sp"
                android:padding="16dp"
                android:drawableStart="@drawable/ic_info"
                android:drawablePadding="8dp"/>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cow_sex"
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="0dp"
            app:cardBackgroundColor="@color/colorBack"
            app:cardCornerRadius="0dp"
            app:strokeColor="@color/colorBorder"
            app:strokeWidth="1dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/home_process_cow_sex"
                android:textColor="@color/colorTextBlack"
                android:fontFamily="@font/roboto_regular"
                android:textSize="18sp"
                android:padding="16dp"
                android:drawableStart="@drawable/ic_search"
                android:drawablePadding="8dp"/>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cow_inventory"
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="0dp"
            app:cardBackgroundColor="@color/colorBack"
            app:cardCornerRadius="0dp"
            app:strokeColor="@color/colorBorder"
            app:strokeWidth="1dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/home_process_cow_inventory"
                android:textColor="@color/colorTextBlack"
                android:fontFamily="@font/roboto_regular"
                android:textSize="18sp"
                android:padding="16dp"
                android:drawableStart="@drawable/ic_news"
                android:drawablePadding="8dp"/>

        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>

</LinearLayout>